# YavOracle

./: README.md
fsr-bind-derive/: Cargo.toml
fsr-bind-derive/src/: lib.rs
fsr-core/: Cargo.toml  verifier_schnorr_naive.rs  verifier_schnorr_optimized.rs
fsr-core/examples/: fs_fischlin_interchange.rs  schnorr.rs  schnorr_fischlin.rs  schnorr_fischlin_dsl.rs  schnorr_fs_macro.rs  schnorr_fs_multiround.rs  schnorr_fs_multiround_old.rs  schnorr_fs_proof.rs  schnorr_fs_proof_DSL.rs  schnorr_interactive.rs  schnorr_proof_dsl_end_to_end.rs  sigma_and_dsl_fischlin_bug.rs  sigma_and_dsl_fischlin_ok.rs  sigma_and_dsl_fs_bug.rs  sigma_and_dsl_fs_ok.rs  sigma_and_proof_dsl_end_to_end.rs  sigma_or_dsl_fischlin_bug.rs  sigma_or_dsl_fischlin_ok.rs  sigma_or_dsl_fs_bug.rs  sigma_or_dsl_fs_ok.rs  sigma_or_fs_bug.rs  sigma_or_fs_ok.rs
fsr-core/src/: error.rs  fischlin.rs  fischlin_proof.rs  fs_proof.rs  fs_runtime.rs  lib.rs  runtime.rs
fsr-proof-dsl/: Cargo.toml
fsr-proof-dsl/src/: lib.rs  lib_old.rs  lib_working_DSL.rs
