[package]
name = "fsr-bind-derive"
version = "0.1.0"
edition = "2024"

description = "Derive(Bindable) for fsr_core messages with per-field #[bind(...)] annotations"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits", "visit"] }
quote = "1"
proc-macro2 = "1"