[package]
name = "fsr-core"
version = "0.1.0"
edition = "2024"

[features]
interactive = ["rand"]

[dependencies]
fsr-bind-derive = { path = "../fsr-bind-derive" }
fsr-proof-dsl = { path = "../fsr-proof-dsl" }
rand = { version = "0.8", default-features = true, optional = true }

[dev-dependencies]
hex = "0.4"